Markup end(maybe)

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                                        </div>
                                     </div>
                                     <div class="m-quiz__navigation">
-                                       <a class="btn btn_back" href="javascript:void(0);" style="display: flex" data-js-quiz-navigation="back">
+                                       <a class="btn btn_back" href="javascript:void(0);" data-js-quiz-navigation="back">
                                           <span>Назад</span>
                                        </a>
                                        <a class="btn empty btn_forward" href="javascript:void(0);" data-js-quiz-navigation="forward">
@@ -347,7 +347,7 @@
                                        <input type="tel" class="input input_phone" name="id">
                                        <label>Ваш телефон</label>
                                     </div>
-                                    <input type="tel" class="input input_phone_recaptcha" name="phone" placeholder="+7">
+                                    <input type="tel" class="input input_phone_recaptcha" name="phone" placeholder="+7 (___) ___-____">
                                     <div class="form__group">
                                        <button type="submit" class="btn btn_quiz">
                                           <span>Получить расчёт</span>
@@ -480,7 +480,7 @@
                            <div class="image">
                               <img src="" data-src="/build/ii/9bbb89c1f870f94aba07559512664ce75d20ba9b.webp" alt="" data-js="lazy">
                            </div>
-                           <a href="javascript:void(0);" class="btn btn_orange take__price" data-js="popup" data-js-popup="modal-order-call" data-js-cbs=""> <span class="blink"></span> <span class="text" style="font-size: 22px; line-height: 1.2"> Узанть <br> стоимость </span> </a>
+                           <a href="javascript:void(0);" class="btn btn_orange take__price" data-js="popup" data-js-popup="modal-order-call" data-js-cbs=""> <span class="blink"></span> <span class="text"> Узанть <br> стоимость </span> </a>
 
                            <div class="name">
                               <span>Базальный имплант</span>
@@ -496,7 +496,7 @@
                            <div class="image">
                               <img src="" data-src="/build/ii/3b510c3abc07a00932e30feda2508f358d3b8b34.webp" alt="" data-js="lazy">
                            </div>
-                           <a href="javascript:void(0);" class="btn btn_orange take__price" data-js="popup" data-js-popup="modal-order-call" data-js-cbs=""> <span class="blink"></span> <span class="text" style="font-size: 22px; line-height: 1.2"> Узанть <br> стоимость </span> </a>
+                           <a href="javascript:void(0);" class="btn btn_orange take__price" data-js="popup" data-js-popup="modal-order-call" data-js-cbs=""> <span class="blink"></span> <span class="text"> Узанть <br> стоимость </span> </a>
                            <div class="name">
                               <span>Кнопочный протез на&nbsp;имплантах</span>
                            </div>
@@ -511,7 +511,7 @@
                            <div class="image">
                               <img src="" data-src="/build/ii/1a7a195889398d88a1afc9fccf12313ca0bbbfab.webp" alt="" data-js="lazy">
                            </div>
-                           <a href="javascript:void(0);" class="btn btn_orange take__price" data-js="popup" data-js-popup="modal-order-call" data-js-cbs=""> <span class="blink"></span> <span class="text" style="font-size: 22px; line-height: 1.2"> Узанть <br> стоимость </span> </a>
+                           <a href="javascript:void(0);" class="btn btn_orange take__price" data-js="popup" data-js-popup="modal-order-call" data-js-cbs=""> <span class="blink"></span> <span class="text"> Узанть <br> стоимость </span> </a>
 
                            <div class="name">
                               <span>Протез на&nbsp;балке</span>
@@ -527,7 +527,7 @@
                            <div class="image">
                               <img src="" data-src="/build/ii/fb2b2fd97e8ede53afebdbb6bcbbdfa6e8a3c61a.webp" alt="" data-js="lazy">
                            </div>
-                           <a href="javascript:void(0);" class="btn btn_orange take__price" data-js="popup" data-js-popup="modal-order-call" data-js-cbs=""> <span class="blink"></span> <span class="text" style="font-size: 22px; line-height: 1.2"> Узанть <br> стоимость </span> </a>
+                           <a href="javascript:void(0);" class="btn btn_orange take__price" data-js="popup" data-js-popup="modal-order-call" data-js-cbs=""> <span class="blink"></span> <span class="text"> Узанть <br> стоимость </span> </a>
 
                            <div class="name">
                               Имплантация <br>
@@ -544,7 +544,7 @@
                            <div class="image">
                               <img src="" data-src="/build/ii/f2f46e44271a0219a6098948b9e39cc3926ae330.webp" alt="" data-js="lazy">
                            </div>
-                           <a href="javascript:void(0);" class="btn btn_orange take__price" data-js="popup" data-js-popup="modal-order-call" data-js-cbs=""> <span class="blink"></span> <span class="text" style="font-size: 22px; line-height: 1.2;"> Узанть <br> стоимость </span> </a>
+                           <a href="javascript:void(0);" class="btn btn_orange take__price" data-js="popup" data-js-popup="modal-order-call" data-js-cbs=""> <span class="blink"></span> <span class="text"> Узанть <br> стоимость </span> </a>
 
                            <div class="name">
                               <span>Скуловая имплантация</span>
@@ -1471,7 +1471,8 @@
                   <div>
                      <div class="not-hurt__top__euro">
                         <i> <img src="index.html" data-src="build/ii/f069a6f8c332137d9ffe29757236bc6121460437.png" alt="" data-js="lazy"> </i> 
-                        <div> Ваша операция пройдёт под <b>европейской анестезией</b> последнего поколения или мы можем провести её <b><span>в седации</span></b> </div>
+                        <div> Ваша операция пройдёт под <b>европейской анестезией</b> последнего поколения или мы можем провести её <b><span style="color:
+#e71762;">в седации</span></b> </div>
                      </div>
                   </div>
                </div>
@@ -1892,11 +1893,11 @@
                <div class="tomography__image"> <img src="index.html" data-src="build/ii/cdc595edfec8c90e27a2aebff9f2e5453db59ab9.png" alt="" data-js="lazy"> </div>
             </div>
          </div>
-         <div style="display: flex; flex-direction: row">
+         <div class="address__map">
             <div>
                <div class="map-affiliates metro_red">
                   <!-- <div class="title"> Красносельская </div> -->
-                  <div class="address"> ул. Серова д.45 </div>
+                  <div class="address" > ул. Серова д.45 </div>
                </div>
             </div>
             <div>
